<resources>
    <string name="app_name">微信</string>
    <!--actionabar相关-->
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_about">关于</string>
    <string name="action_alarm">提醒</string>
    <string name="action_more">更多</string>
    <string name="more_add">添加朋友</string>
    <string name="more_group">发起群聊</string>
    <string name="more_scanner">扫一扫</string>
    <string name="more_pay">收付款</string>
    <string name="more_feedback">帮助与反馈</string>
    <string name="action_back">返回</string>
    <!--搜索框弹出-->
    <string name="article">文章</string>
    <string name="public_push">公众号</string>
    <!--底部菜单相关-->
    <string name="menu_wechat">微信</string>
    <string name="menu_contacts">联系人</string>
    <string name="menu_friends_life">朋友圈</string>
    <string name="menu_my">我</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
