<?xml version="1.0" encoding="utf-8"?>
<!--底部菜单栏的布局-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
    android:layout_alignParentBottom="true"
        android:background="@color/white">
        <LinearLayout
            style ="@style/menu_bottom">
            <ImageButton
                android:id ="@+id/button_wechat"
                style="@style/button_bottom"
                android:src="@drawable/ic_message_black_48dp" />
            <TextView
                style="@style/text_bottom"
                android:text="@string/menu_wechat"/>
        </LinearLayout>
        <LinearLayout
            style ="@style/menu_bottom">
            <ImageButton
                android:id="@+id/button_contacts"
                style="@style/button_bottom"
                android:src="@drawable/ic_contacts_black_48dp" />
            <TextView
                style="@style/text_bottom"
                android:text="@string/menu_contacts"/>
        </LinearLayout>
        <LinearLayout
            style ="@style/menu_bottom">
            <ImageButton
                android:id ="@+id/button_life"
                style="@style/button_bottom"
                android:src="@drawable/ic_explore_black_48dp" />
            <TextView
                style="@style/text_bottom"
                android:text="@string/menu_friends_life"/>
        </LinearLayout>

    <LinearLayout
            style ="@style/menu_bottom">
            <ImageButton
                android:id ="@+id/button_my"
                style="@style/button_bottom"
                android:src="@drawable/ic_perm_identity_black_48dp" />
            <TextView
                style="@style/text_bottom"
                android:text="@string/menu_my"/>
        </LinearLayout>
</LinearLayout>
