<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingTop="100dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation ="vertical">
        <ImageButton
            android:id ="@+id/search_friend_life"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:src ="@drawable/ic_camera_black_24dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:gravity="center"
            android:text="@string/menu_friends_life"/>
     </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation ="vertical">
        <ImageButton
            android:id ="@+id/search_article"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:src ="@drawable/ic_book_black_24dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:gravity="center"
            android:text="@string/article"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation ="vertical">
        <ImageButton
            android:id ="@+id/search_public_push"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:src ="@drawable/ic_account_circle_black_24dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:gravity="center"
            android:text="@string/public_push"/>
    </LinearLayout>

</LinearLayout>
